--- a/app/index.html
+++ b/app/index.html
@@ -109,6 +109,7 @@
         <script src="scripts/controllers/events/addwinner.js"></script>
         <script src="scripts/controllers/events/addevent.js"></script>
         <script src="scripts/controllers/events/category.js"></script>
+        <script src="scripts/controllers/events/subcategory.js"></script>
         <script src="scripts/controllers/events/eventslist.js"></script>
         <script src="scripts/controllers/events/eventtabs.js"></script>
         <script src="scripts/controllers/events/registrations.js"></script>
